Update to use path.of()
- Changed paths.get to path.of to remove import.